0.0.6
-----
1. Initial work on SlimBrowse - only used in favorites so far.
2. Dutch, German, and French translations.
3. Group players have no replaygain setting.

0.0.5
-----
1. When listing browse items, check for title if name is not set. Fixes
   podcast listing.
2. If browse listing only has 1 item with description, then show description
   under item. Mainly for podcasts.
3. Improve how favorites are added.
4. When adding a favorite, check if it already exists.

0.0.4
-----
1. Fix retrieval of language files.
2. Add en-gb translation.
3. Add "id" tag to install.xml file.
4. Fix restoring dark/light status.
5. If asked to scroll to current track, and its not in currently fetched list
   of items - then fetch to current index + 50
6. For app entries that have isuadio=1 and hasitems=1 and there are actually
   child items, then use playall/addall. Fixes playing BandCampout weeklies
   "Listen to songs (without comments)" entries.
7. Fix scrolling to more search results.
8. Dim speaker/group icon of powered off players.
9. Use currently visible page size to calculate when to fetch more items.

0.0.3
-----
1. Fix loading URL items (e.g. Radio stations).
2. When retrieving browse items, if 'isaudio==1' then add audio actions, even if
   'hasitems==1'
3. Fix setting as Default.
4. When browsing apps, do not navigate into an item with 0 entries. YouTube
   app sets 'isaudio==1' and 'hasitems==1' for music URLs.
5. Support Virtual Libraries.
6. Disable use of virtual scroller, causes lists to occasionally not be fully
   drawn.

0.0.2
-----
1. Query additional browse modes plugin for extra browse modes. If none,
   fallback to conductors and composers.
2. Alarms.
3. i18n
4. Lyrics, artist info, etc.

0.0.1
-----
1. Initial release